services/mlflow/mlflow-ingress.yaml
# services/mlflow/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ui-ingress
  namespace: mlops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.ioio/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /mlflow/(.*)
        pathType: Prefix
        backend:
          service:
            # CORRECTED: This must match the name of the service in mlflow.yaml
            name: mlflow
            port:
              number: 5000
